--- a/back-end-developer.html
+++ b/back-end-developer.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +134,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>We are looking to add a Backend Developer to our growing environment. Our next colleague will develop next generation web sites, web application user interfaces, mobile optimized sites and applications and multimedia content
                                     to support some of our client’s expanding development issues.</p>
                                 <div class="col-xs-12 col-md-10 offset-md-1 internship">
