--- a/careers.html
+++ b/careers.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +133,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>We are constantly on the lookout for talented, bright and motivated individuals. We offer a supportive and family-like environment with great compensation at a young and growing company that has a lot of room for personal
                                     growth, learning new technologies and acquiring managerial experience.</p>
                                 <!-- <a class="read_more" href="#">Read more</a> -->
@@ -295,7 +303,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/internship-img.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/internship-img.webp" alt="">
+                                    <img src="images/internship-img.jpg" alt="">
+                                </figure>
                                 <p>If you are enrolled in University or just finishing your education, but also if you’re visiting some of the private Academies in the city, and you are excited about programming or testing – always asking “What if?”, at
                                     Sourcico your curiosity matters!We will give you your initial experience with our 4 months Internship program because here the opportunities are endless and the knowledge sharing is one of the most important postulates.</p>
                                 <p>At Sourcico the Interns are treated like full time employees and are expected to go above and beyond to meet the customers goals. You will have a chance to work with different clients being shifted to different projects
