--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +203,11 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img class="mission" src="images/mission.jpg" alt="#" /></figure>
+
+                                <figure class="mission">
+                                    <source type="image/webp" srcset="images/mission.webp" alt="">
+                                    <img src="images/mission.jpg" alt="">
+                                </figure>
                                 <p>Our mission is to enable our clients to go-to-market ASAP with the highest technical skills and at the lowest cost. Our mission is to build and nourish long lasting relationships with our clients via giving them the best
                                     service possible. Our mission is to cultivate and motivate our talents to enable them to flourish and progress along with our clients. As we are cultivating our talents and investing continuously in our human capital,
                                     we continuously create high value for our clients. We have our incubator plan where we execute the craziest ideas by our interns and junior developers so that later they will be able to contribute from their experience
