--- a/front-end-developer.html
+++ b/front-end-developer.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +134,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>As a Frontend/JavaScript Engineer, you will help us build beautiful and quick interfaces that play a daily mission critical role for some of our biggest client companies. You will work closely with a small or mid team of
                                     frontend and backend developers and have a say in the design future and in the functional and visual design of what you build day-to-day.You will collaborate with strategy, design, and development teams to convert prototypes
                                     into websites and web-based applications using your mastery of the JavaScript environment.</p>
