--- a/ios-developer.html
+++ b/ios-developer.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +134,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>The iOS developer is responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. Your primary focus will be development of iOS applications
                                     and their integration with back-end services. You will be working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving,
                                     sophisticated design, and the creation of quality products is essential.</p>
