--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <figure>
+                                            <source type="image/webp" srcset="images/logo.webp" alt="">
+                                            <img src="images/logo.png" alt="">
+                                        </figure>
                                     </div>
                                 </div>
                             </div>
@@ -127,7 +130,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/business_img1.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/business_img1.webp" alt="">
+                                    <img src="images/business_img1.jpg" alt="">
+                                </figure>
                                 <p>Sourcico was established to supply high quality, cost effective offshore software development services. Sourcico was established to meet the growing need of highly skilled software engineers. Sourcico’s purpose is to enable
                                     you to speed-up your development pace while maintaining cost-efficiency and flexibility. Sourcico is an international company with headquarters in Israel that includes management, administration, sales and a CTO, and
                                     offshore competence centers that include local management, technical leadership, recruiting, software engineers and quality assurance. In short Our Mission is to tailor the best fit solution, very fast and at a very
@@ -312,7 +318,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img class="mission" src="images/mission.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/mission.webp" alt="">
+                                    <img src="images/mission.jpg" alt="">
+                                </figure>
                                 <p>Our mission is to enable our clients to go-to-market ASAP with the highest technical skills and at the lowest cost. Our mission is to build and nourish long lasting relationships with our clients via giving them the best
                                     service possible. Our mission is to cultivate and motivate our talents to enable them to flourish and progress along with our clients. As we are cultivating our talents and investing continuously in our human capital,
                                     we continuously create high value for our clients. We have our incubator plan where we execute the craziest ideas by our interns and junior developers so that later they will be able to contribute from their experience
