--- a/android-developer.html
+++ b/android-developer.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -130,6 +135,10 @@
                         <div class="col-md-12">
                             <div class="business_box ">
                                 <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>As an Android engineer you would not only be developing enduring social or business apps, but also changing the lives of many. We appeal to all kinds of app users and bring in the best user experience backed with fascinating
                                     designs. We are looking for dedicated android engineers who can embrace our culture and also make a difference to our work.</p>
                                 <div class="col-xs-12 col-md-10 offset-md-1 internship">
