--- a/cpp-developer.html
+++ b/cpp-developer.html
@@ -52,7 +52,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
+                                        <a href="index.html">
+                                            <figure>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
+                                            </figure>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +134,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.webp" alt="#" /></figure>
+                                <figure>
+                                    <source type="image/webp" srcset="images/career.webp" alt="">
+                                    <img src="images/career.jpg" alt="">
+                                </figure>
                                 <p>Do you think C++ is interesting and challenging? We have the right job for you! We are seeking for a C++ Developer to join our world-class team. The ideal candidate should be comfortable with creative problem solving in
                                     a startup environment and If you like tinkering, are curious by nature, consider yourself a technologist or someone who thinks several steps ahead then you will fit in well on our team.</p>
                                 <div class="col-xs-12 col-md-10 offset-md-1 internship">
