--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                                 <div class="center-desk">
                                     <div class="logo">
                                         <a href="index.html">
-                                            <figure>
+                                            <picture>
                                                 <source type="image/webp" srcset="images/logo.webp" alt="">
                                                 <img src="images/logo.png" alt="">
-                                            </figure>
+                                            </picture>
                                         </a>
                                     </div>
                                 </div>
@@ -119,10 +119,10 @@
                         <div class="col-md-4">
                             <div class="projects_box">
                                 <div class="projects_box">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/1.webp" " alt=" ">
                                         <img src="images/1.png " alt=" ">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>SDLC</h2>
                                 <p>Our clients use our services for the whole range of the SDLC (Software Development Life Cycle), parts of it or all of it. It can be on an innovative new product with a cutting edge technology or a mature product with a
@@ -132,10 +132,10 @@
                         <div class="col-md-4 ">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp " srcset="images/2.webp " " alt=" ">
                                         <img src="images/2.png " alt=" ">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>R&D</h2>
                                 <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
@@ -146,10 +146,10 @@
                         <div class="col-md-4 ">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/3.webp" " alt=" ">
                                         <img src="images/3.png " alt=" ">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>Agile</h2>
                                 <p>We are a full agile operation. We also adopt any or all of our Client’s standards, starting from coding convention all the way to continuous integration using our client’s systems for source control and bug tracking. All
@@ -178,10 +178,10 @@
                     <div class="row ">
                         <div class="col-md-12 ">
                             <div class="business_box ">
-                                    <figure>
-                                    <source type="image/webp " srcset="images/business_img.webp " " alt=" ">
+                                    <picture>
+                                        <source type="image/webp " srcset="images/business_img.webp " " alt=" ">
                                         <img src="images/business_img.jpg" alt=" ">
-                                    </figure>
+                                    </picture>
                                     <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p><a class="read_more " href="services.html ">Read more</a></div>
                             </div>
                         </div>
@@ -203,7 +203,13 @@
                     </div>
                     <div class="row ">
                         <div class="col-md-3 ">
-                            <div class="Testimonial_box "><i><img src="images/plan1.webp " alt="# "></i></div>
+
+                            <div class="Testimonial_box "><i>
+                                <picture>
+                                    <source type="image/webp " srcset="images/plan1.webp"  alt=" ">
+                                    <img src="images/plan1.png" alt=" ">
+                                </picture>
+                            </i></div>
                         </div>
                         <div class="col-md-9 ">
                             <div class="Testimonial_box ">
@@ -215,7 +221,11 @@
                     </div>
                     <div class="row ">
                         <div class="col-md-3 ">
-                            <div class="Testimonial_box "><i><img src="images/plan2.webp " alt="# "></i></div>
+                            <div class="Testimonial_box "><i>                                
+                                <picture>
+                                <source type="image/webp " srcset="images/plan2.webp"  alt=" ">
+                                <img src="images/plan2.png" alt=" ">
+                            </picture></i></div>
                         </div>
                         <div class="col-md-9 ">
                             <div class="Testimonial_box ">
@@ -227,7 +237,10 @@
                     </div>
                     <div class="row ">
                         <div class="col-md-3 ">
-                            <div class="Testimonial_box "><i><img src="images/plan3.webp " alt="# "></i></div>
+                            <div class="Testimonial_box "><i>                                <picture>
+                                <source type="image/webp " srcset="images/plan3.webp"  alt=" ">
+                                <img src="images/plan3.png" alt=" ">
+                            </picture></i></div>
                         </div>
                         <div class="col-md-9 ">
                             <div class="Testimonial_box ">
