--- a/ios-developer.html
+++ b/ios-developer.html
@@ -53,10 +53,10 @@
                                 <div class="center-desk">
                                     <div class="logo">
                                         <a href="index.html">
-                                            <figure>
+                                            <picture>
                                                 <source type="image/webp" srcset="images/logo.webp" alt="">
                                                 <img src="images/logo.png" alt="">
-                                            </figure>
+                                            </picture>
                                         </a>
                                     </div>
                                 </div>
@@ -134,10 +134,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure>
+                                <picture>
                                     <source type="image/webp" srcset="images/career.webp" alt="">
                                     <img src="images/career.jpg" alt="">
-                                </figure>
+                                </picture>
                                 <p>The iOS developer is responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. Your primary focus will be development of iOS applications
                                     and their integration with back-end services. You will be working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving,
                                     sophisticated design, and the creation of quality products is essential.</p>
