--- a/services.html
+++ b/services.html
@@ -53,10 +53,10 @@
                                 <div class="center-desk">
                                     <div class="logo">
                                         <a href="index.html">
-                                            <figure>
+                                            <picture>
                                                 <source type="image/webp" srcset="images/logo.webp" alt="">
                                                 <img src="images/logo.png" alt="">
-                                            </figure>
+                                            </picture>
                                         </a>
                                     </div>
                                 </div>
@@ -134,10 +134,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/1.webp" alt="">
                                         <img src="images/1.png" alt="">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>SDLC</h2>
                                 <p>
@@ -149,10 +149,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/2.webp" alt="">
                                         <img src="images/2.png" alt="">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>R&D</h2>
                                 <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
@@ -164,10 +164,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/3.webp" alt="">
                                         <img src="images/3.png" alt="">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>Agile</h2>
                                 <p>We are a full agile operation. We also adopt any or all of our Client’s standards, starting from coding convention all the way to continuous integration using our client’s systems for source control and bug tracking. All
@@ -198,10 +198,10 @@
                     <div class="row">
                         <div class="col-md-2 tech">
                             <div class="business_box ">
-                                <figure class="tech_icon">
+                                <picture class="tech_icon">
                                     <source type="image/webp" srcset="images/cloud.webp" alt="">
                                     <img src="images/cloud.png" alt="">
-                                </figure>
+                                </picture>
                                 <h2><strong>Cloud <br>and Web</strong></h2>
 
                                 <p>
@@ -211,10 +211,10 @@
                         </div>
                         <div class="col-md-2 tech">
                             <div class="business_box ">
-                                <figure class="tech_icon">
+                                <picture class="tech_icon">
                                     <source type="image/webp" srcset="images/mobile.webp" alt="">
                                     <img src="images/mobile.png" alt="">
-                                </figure>
+                                </picture>
                                 <h2><strong>Mobile <br>Platforms</strong></h2>
                                 <p>Android, iOS, Windows Mobile/Phone, Blackberry and other proprietary OSs. Native Apps development and end-to-end client-server systems.</p>
                                 <!-- <a class="read_more" href="#">Read more</a> -->
@@ -222,10 +222,10 @@
                         </div>
                         <div class="col-md-2  tech">
                             <div class="business_box ">
-                                <figure class="tech_icon">
+                                <picture class="tech_icon">
                                     <source type="image/webp" srcset="images/Embedded.webp" alt="">
                                     <img src="images/Embedded.png" alt="">
-                                </figure>
+                                </picture>
                                 <h2><strong>Embedded<br> software</strong></h2>
                                 <p>Driver development, protocol stacks, BSPs, Kernel, RTOS including Android, Linux, Nucleus, QNX and others</p>
                                 <!-- <a class="read_more " href="# ">Read more</a> -->
@@ -233,10 +233,10 @@
                         </div>
                         <div class="col-md-2 tech ">
                             <div class="business_box ">
-                                <figure class="tech_icon">
+                                <picture class="tech_icon">
                                     <source type="image/webp" srcset="images/big-data.webp" alt="">
                                     <img src="images/big-data.png" alt="">
-                                </figure class="tech_icon">
+                                </picture class="tech_icon">
                                 <h2><strong>Big <br> Data</strong></h2>
                                 <p>Analytics , Data mining, distributed databases and many others in accordance with our clients’ needs</p>
                                 <!-- <a class="read_more " href="# ">Read more</a> -->
@@ -244,10 +244,10 @@
                         </div>
                         <div class="col-md-2 tech ">
                             <div class="business_box ">
-                                <figure class="tech_icon">
+                                <picture class="tech_icon">
                                     <source type="image/webp" srcset="images/qa.webp" alt="" width="130px" height="130px">
                                     <img src="images/qa.png" alt="" width="130px" height="130px">
-                                </figure>
+                                </picture>
                                 <h2><strong>Quality <br>Assurance</strong></h2>
                                 <p>QA services and unit testing (manual and automated on all leading platforms.</p>
                                 <!-- <a class="read_more " href="# ">Read more</a> -->
@@ -279,10 +279,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/team-img.webp" alt="" width="130 " height="130 ">
                                         <img src="images/team-img.jpg" alt="" width="130 " height="130 ">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>Team structuring</h2>
                                 <p>Since team composition is a key factor in the productivity of the team, we developed a method in which together with our clients we define the right composition of talent required for the success of the team. The end result
@@ -293,10 +293,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/knoledge-immg.webp" alt="">
                                         <img src="images/knoledge-immg.jpg" alt="">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>Knowledge Transfer</h2>
                                 <p>Knowledge transfer to an offshore team is considered one of the most challenging and time consuming task; we have perfected the process of knowledge transfer from our clients to our offshore teams thus enabling a quick
@@ -308,10 +308,10 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure>
+                                    <picture>
                                         <source type="image/webp" srcset="images/scalability-img.webp" alt="">
                                         <img src="images/scalability-img.jpg" alt="">
-                                    </figure>
+                                    </picture>
                                 </div>
                                 <h2>Scalability</h2>
                                 <p>One of the most important things in a company’s or a product’s lifecycle is to have flexibility in resources and skills when needed. Our Client enjoy the option of fast and flexible growth with a quick turnover from client
