added Apply now button to the open position pages

--- a/back-end-developer.html
+++ b/back-end-developer.html
@@ -183,6 +183,10 @@
                                     </ul>
                                 </div>
                                 <!-- <a class="read_more" href="#">Read more</a> -->
+                                <p class="business business_box">
+                                    <a class="read_more" href="mailto:jobs@sourcico.com?subject=BackEnd%20Developer">
+                                         Apply Now </a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -197,9 +201,7 @@
                             confidentiality
                         </p>
                         <p class="business business_box">
-                            <a class="read_more" href="careers.html">
-                                 Back To Job Listings </a>
-
+                            <a href="careers.html">&lt;&lt; Back To Job Listings </a>
                         </p>
                     </div>
                 </div>
