--- a/android-developer.html
+++ b/android-developer.html
@@ -183,6 +183,10 @@
                                     </ul>
                                 </div>
                                 <!-- <a class="read_more" href="#">Read more</a> -->
+                                <p class="business business_box">
+                                    <a class="read_more" href="mailto:jobs@sourcico.com?subject=Android%20Developer">
+                                         Apply Now </a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -197,8 +201,8 @@
                             confidentiality
                         </p>
                         <p class="business business_box">
-                            <a class="read_more" href="careers.html">
-                                 Back To Job Listings </a>
+                            <a href="careers.html">
+                                &lt;&lt; Back To Job Listings </a>
 
                         </p>
                     </div>
@@ -241,10 +245,10 @@
     <!-- end footer -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <!-- <script src="js/popper.min.js"></script> -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
+    <!-- <script src="js/plugin.js"></script> -->
     <!-- sidebar -->
     <!-- <script src="js/jquery.mCustomScrollbar.concat.min.js"></script> -->
     <script src="js/custom.js"></script>
