--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 ">
-                            <form class="main_form" method="POST" data-netlify="true">
+                            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+                            <script>
+                                hbspt.forms.create({
+                                    portalId: "7023466",
+                                    formId: "6e660f2b-81b0-4de6-bef5-71b35f9768ef"
+                                });
+                            </script>
+                            <!-- <form class="main_form" method="POST" data-netlify="true">
                                 <div class="row">
                                     <div class="col-md-12 ">
                                         <input class="form_contril" placeholder="Name " type="text" name="Name ">
@@ -153,7 +160,7 @@
                                         <button type="submit" class="send_btn">Send</button>
                                     </div>
                                 </div>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
