img fix in services

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <!-- site metas -->
     <title>About Us | Sourcico</title>
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="About Us Page">
     <meta name="author" content="">
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
