--- a/services.html
+++ b/services.html
@@ -280,8 +280,8 @@
                             <div class="projects_box ">
                                 <div class="projects_box ">
                                     <picture>
-                                        <source type="image/webp" srcset="images/team-img.webp" alt="" width="130 " height="130 ">
-                                        <img src="images/team-img.jpg" alt="" width="130 " height="130 ">
+                                        <source type="image/webp" srcset="images/team-img.webp" alt="">
+                                        <img src="images/team-img.jpg" alt="">
                                     </picture>
                                 </div>
                                 <h2>Team structuring</h2>
