--- a/careers.html
+++ b/careers.html
@@ -33,7 +33,8 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-</head <!-- body -->
+</head>
+<!-- body -->
 
 <body class="main-layout clean">
     <!-- loader  -->
@@ -209,6 +210,46 @@
 
             <div class="row">
                 <div class="col-md-10 offset-md-1">
+                    <div class="row">
+
+
+                        <div class="col-md-6">
+                            <div class="projects_box ">
+                                <!-- <figure><img src="images/projects_img.png" alt="#"></figure> -->
+
+                                <div class="col-md-12">
+                                    <div class="inner_box ">
+                                        <h2><strong>C++ Developer</strong> </br>R&D</h2>
+
+                                        <p>Do you think C++ is interesting and challenging? We have the right job for you! We are seeking for a C++ Developer to join our world-class team. The ideal candidate should be comfortable with creative problem solving
+                                            in a startup environment and If you like tinkering, are curious by nature, consider yourself a technologist or someone who thinks several steps ahead then you will fit in well on our team.</p>
+
+
+                                    </div>
+                                    <a class="read_more" href="cpp-developer.html">Apply Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="projects_box ">
+                                <!-- <figure><img src="images/projects_img.png" alt="#"></figure> -->
+
+                                <div class="col-md-12">
+                                    <div class="inner_box ">
+                                        <h2><strong>iOS Developer</strong> </br>R&D</h2>
+
+                                        <p>The iOS developer is responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. Your primary focus will be development of iOS applications
+                                            and their integration with back-end services. You will be working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem
+                                            solving, sophisticated design, and the creation of quality products is essential.</p>
+
+
+                                    </div>
+                                    <a class="read_more" href="ios-developer.html">Apply Now</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="row">
 
 
