--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-md-12 ">
-                        <form class="main_form " method="POST " data-netlify="true ">
+                        <form class="main_form " method="POST ">
                             <div class="row ">
                                 <div class="col-md-12 "><input class="form_contril " placeholder="Name " type="text " name="Name "></div>
                                 <div class="col-md-12 "><input class="form_contril " placeholder="Phone Number " type="text " name=" Phone Number "></div>
